Fix form align issues
Input tips for password inputs takes up space and
needs to be populated to align with other inputs.
Cannot be empty.

--- a/styles.css
+++ b/styles.css
@@ -206,6 +206,6 @@ div.input-tip {
     color: rgb(110, 107, 107);
 }
 
-div.input-tip.active {
+div.input-tip.active:not(.block) {
     --tip-opacity: 1;
 }
